# EO-processing

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: Maxar_Processing_&_Analysis.ipynb  main.py
